# localization_using_area_graph

./: .gitignore  CMakeLists.txt  POSE_SCORING_IMPROVEMENTS.md  README.md  README_ch.md  README_en.md  Update.md  package.xml  plugins.xml
config/: ag_loc_nav2.rviz  agloc_nav2_params.yaml  amclRviz.rviz  areaGraphRviz.rviz  height_filtering_params.yaml  localization.rviz  params.yaml  params_old_bag.yaml
data/: GTliosam2023-05-10-20-16-52.txt  GTliosam2023-05-24-20-54-47.txt  corridor_map.txt  picking_list_star_center.txt  picking_list_star_center_initialization.txt
data/map/: corridor_enlarge.txt  picking_list.txt
data/robotPoseResult/: robotPoseTum.txt
docs/: GLOBAL_LOCALIZATION_FIX.md  TIME_SYNC_FIX.md  height_filtering_solution.md
include/: cloudBase.hpp  cloudHandler.hpp  cloudInitializer.hpp  utility.h
include/localization_using_area_graph/: agloc_localizer_node.hpp  amcl_odom_tf_broadcaster.hpp  cloudBase.hpp  cloudHandler.hpp  cloudInitializer.hpp  data_sender.hpp  destination_receiver.hpp  geo_transform.hpp  map_handler.hpp  odom_fusion.hpp  particle_generator.hpp  thread_pool.hpp  utility.hpp
launch/: agloc_components.launch.py  agloc_localization_launch.py  agloc_nav2_integration.launch.py  amcl.launch  amcl.launch.py  run.launch  run.launch.py  run_time_sync_fixed.launch.py  test_plugin.launch.py
maps/: elevator.pgm  elevator.yaml  map.pgm  map.yaml
msg/: MapInsideOneRoom.msg  RobotPathGeo.msg  RobotPoseGeo.msg
rescueResult/: 1668424054.93rescueRoom.txt  1668424059.63rescueRoom.txt  1668424074.62rescueRoom.txt  1668424089.70rescueRoom.txt
rviz/: agloc_test.rviz
scripts/: 0510legoruntime.txt  ML.py  README_auto_recorder.md  amcl_send_odom_tf.py  arduino.py  auto_bag_recorder.py  cubic_coeff.py  cubic_spline.py  diff.py  generateParticles.py  getDestinationFromRVIZ.py  histogram.py  mapHandler.py  pedal.py  plot_turkey.py  runtime.py  saveAmclTumResult.py  sendData.py  start_auto_recording.sh  statistic.py  statistic_dot.py  test.py  test_global_localization_fix.py  test_py  textinimg.py  transcateTUM.py  truncated_corridor.py  weightFunction.py  未命名.ipynb
scripts/.ipynb_checkpoints/: 未命名-checkpoint.ipynb
scripts_jiajie/: 3d_pc_visual.py
src/: agloc_localizer_node.cpp  amcl_odom_tf_broadcaster.cpp  amcl_odom_tf_broadcaster_node.cpp  cloudBase.cpp  cloudHandler.cpp  cloudInitializer.cpp  cloudInitializer_multithread.cpp  cloudInitializer_pose_evaluation.cpp  cloudInitializer_thread_safe.cpp  data_sender.cpp  data_sender_node.cpp  destination_receiver.cpp  destination_receiver_node.cpp  map_handler.cpp  map_handler_node.cpp  odom_fusion.cpp  particle_generator.cpp  particle_generator_node.cpp  saveAmclTumResult.cpp  utility.cpp
